# Samples

BEv1.0/: CMakeLists.txt  main.cpp
async_client-server/: CMakeLists.txt  aserver.cpp  client.cpp
async_client-server/html/: _c_make_c_compiler_id_8c.html  _c_make_c_compiler_id_8c_source.html  _c_make_c_x_x_compiler_id_8cpp.html  _c_make_c_x_x_compiler_id_8cpp_source.html  annotated.html  aserver_8cpp.html  aserver_8cpp__incl.map  aserver_8cpp__incl.md5  aserver_8cpp_acb06f12df1818a3a86792cdb2e1a9ba2_icgraph.map  aserver_8cpp_acb06f12df1818a3a86792cdb2e1a9ba2_icgraph.md5  aserver_8cpp_source.html  classes.html  classtcp__connection-members.html  classtcp__connection.html  classtcp__connection__coll__graph.map  classtcp__connection__coll__graph.md5  classtcp__connection__inherit__graph.map  classtcp__connection__inherit__graph.md5  classtcp__connection_a2a1967f305a797f7af974cdc7d49a283_cgraph.map  classtcp__connection_a2a1967f305a797f7af974cdc7d49a283_cgraph.md5  classtcp__connection_a5ddd316caf7f95163acbed9cff76c02e_icgraph.map  classtcp__connection_a5ddd316caf7f95163acbed9cff76c02e_icgraph.md5  classtcp__connection_a67e479b2e8dda66623e91fb9d627ced7_icgraph.map  classtcp__connection_a67e479b2e8dda66623e91fb9d627ced7_icgraph.md5  classtcp__server-members.html  classtcp__server.html  classtcp__server_a1c5afd49f5a12012b3a597985af714fd_cgraph.map  classtcp__server_a1c5afd49f5a12012b3a597985af714fd_cgraph.md5  classtcp__server_ab8f7a82ab92a9df9b64aad31ebfaa068_icgraph.map  classtcp__server_ab8f7a82ab92a9df9b64aad31ebfaa068_icgraph.md5  client_8cpp.html  client_8cpp__incl.map  client_8cpp__incl.md5  client_8cpp_a0ddf1224851353fc92bfbff6f499fa97_cgraph.map  client_8cpp_a0ddf1224851353fc92bfbff6f499fa97_cgraph.md5  client_8cpp_ab687519af0c2cd8c7294acc41068b533_icgraph.map  client_8cpp_ab687519af0c2cd8c7294acc41068b533_icgraph.md5  client_8cpp_source.html  dir_07df83f40918f7501b465e30afd00040.html  dir_826ab640b23ea0cadae449406142c6d7.html  (+24 more)
async_client-server/html/search/: all_0.js  all_1.js  all_3.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  classes_0.js  files_0.js  files_1.js  functions_0.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  searchdata.js  variables_3.js  variables_4.js
async_client_server_from_hubr/: CMakeLists.txt  async_client.cpp  async_server.cpp
basic_element/: CMakeLists.txt  main.cpp
basic_element/configs/: many_data_atoms_in_solid_data.json  many_solid_data_in_chain.json  mix_config.json
basic_element/include/: TestProgram.hpp
basic_element/include/data_entity/: RawDataWrite.hpp
basic_element/include/data_entity/client/: ClientDataAtomWrite.hpp  ClientDataPacketWrite.hpp  ClientDataStripeWrite.hpp
basic_element/include/data_entity/physical/: PhysicalRegion.hpp
basic_element/include/data_entity/system/: ChecksumChainWrite.hpp  ChecksumSolidDataWrite.hpp  DataAtom.hpp  DataStripeWrite.hpp  FullStripeWrite.hpp  SolidData.hpp  SolidDataChain.hpp
basic_element/include/disk_performer/: DiskPerformer.hpp  DiskPort.hpp
basic_element/include/disk_performer/hw_queue_mirror/: HWQueueMirrorBuffer.hpp  HWQueueMirrorElement.hpp
basic_element/include/disk_performer/local_disk_queue/: LocalDiskQueue.hpp  LocalDiskQueueElement.hpp
basic_element/include/global_buffer/: GlobalBufferMock.hpp
basic_element/include/load/: LoadParameters.hpp  LoadProfile.hpp  LoadTemplate.hpp
basic_element/include/statistics/: ExternalStatistics.hpp
basic_element/include/utils/: Packet.hpp
basic_element/src/: TestProgram.cpp
basic_element/src/data_entity/: RawDataWrite.cpp
basic_element/src/disk_performer/: DiskPerformer.cpp  DiskPort.cpp
basic_element/src/global_buffer/: GlobalBufferMock.cpp
basic_element/src/load/: LoadParameters.cpp  LoadProfile.cpp  LoadTemplate.cpp
basic_element/src/statistics/: ExternalStatistics.cpp
basic_element/src/utils/: Packet.cpp
basic_element/test/DiskPerformerTest/: DiskPerformerTests.cpp
basic_element/test/DiskPortTest/: DiskPortTests.cpp
basic_element/test/EntityStatisticsBufferTest/: EntityStatisticsBufferTest.cpp
basic_element/test/ExternalStatisticsTest/: ExternalStatisticsTest.cpp
basic_element/test/GlobalBufferMockTests/: GlobalBufferMockTests.cpp
basic_element/test/HWQueueMirrorBufferTests/: HWQueueMirrorBufferTests.cpp
basic_element/test/LocalDiskQueueTest/: LocalDiskQueueTest.cpp
basic_element/test/meta/: timeout.hpp
basic_element/utils/thread_safe_collection/: CMakeLists.txt  ThreadSafeList.cpp  ThreadSafeList.hpp  main.cpp
boost_shared_memory/: CMakeLists.txt  cock_sucker  main.cpp
gorynych/gorynych-develop-abb5538c47b8719eced65fdcc4a6b666cab4d9f5/: .gitignore  CMakeLists.txt  README.md
gorynych/gorynych-develop-abb5538c47b8719eced65fdcc4a6b666cab4d9f5/docs/: config.txt  readme.txt
protobuf-api-test-example/: .gitignore  CMakeLists.txt  client.cpp  packet.cpp  packet.h  server.cpp
protobuf-api-test-example/man/man3/: CMakeCCompilerId.c.3  CMakeCXXCompilerId.cpp.3  Packet.3  _home_user_Programming projects_CLionProjects_protobuf-api-test-example_cmake-build-debug_.3  _home_user_Programming projects_CLionProjects_protobuf-api-test-example_cmake-build-debug_CMakeFiles_.3  _home_user_Programming projects_CLionProjects_protobuf-api-test-example_cmake-build-debug_CMakeFiles_3.7.2_.3  _home_user_Programming projects_CLionProjects_protobuf-api-test-example_cmake-build-debug_CMakeFiles_3.7.2_CompilerIdCXX_.3  _home_user_Programming projects_CLionProjects_protobuf-api-test-example_cmake-build-debug_CMakeFiles_3.7.2_CompilerIdC_.3  client.cpp.3  command_api.pb.cc.3  command_api.pb.h.3  feature_tests.c.3  feature_tests.cxx.3  google.3  google_protobuf.3  google_protobuf_is_proto_enum_ _gorynych_Command_Command_Type _.3  gorynych.3  gorynych_Command.3  gorynych_Command_BIND_DISK_TO_SCST_Arguments.3  gorynych_Response.3  gorynych_StaticDescriptorInitializer_command_5fapi_2eproto.3  packet.cpp.3  packet.h.3  server.cpp.3
protobuf-api-test-example/proto/: command_api.proto
shared_memory/: CMakeLists.txt  main.cpp
test_engine/: CMakeLists.txt  main.cpp  test_class.hpp
(+355 files in other folders)
